--- a/config/config.private.example
+++ b/config/config.private.example
@@ -3,5 +3,6 @@
 ## and locally. Please do not version .private files!
 
 {
-    "SLACK_TOKEN": "THIS IS A SECRET"
+    "SLACK_TOKEN": "THIS IS A SECRET",
+    "SLACK_WEBHOOK_SECRET": "THIS IS ANOTHER SECRET"
 }
