--- a/barracks/lunch-bot/requirements.txt
+++ b/barracks/lunch-bot/requirements.txt
@@ -9,8 +9,11 @@ pandas==0.18.1
 python-dateutil==2.5.3
 pytz==2016.6.1
 requests==2.10.0
+scikit-learn==0.17.1
 scipy==0.18.0
+simplejson==3.8.2
 six==1.10.0
+sklearn==0.0
 slackclient==1.0.1
 websocket-client==0.37.0
 Werkzeug==0.11.10
